fix/playlist: add removesong and update getall with access type
